# ub-data

./: .gitignore  fetch_faculties.py  fetch_publications.py  main.ipynb  pyproject.toml  test.ipynb  transcript.json
data/: leiden_Faculty_of_Archaeology.csv  leiden_governance.csv
