[project]
name = "ub-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "duckdb>=1.2.1",
    "extruct>=0.18.0",
    "fastembed>=0.5.1",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyoai>=2.5.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=75.8.1",
    "tqdm>=4.67.1",
]
